--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   text-shadow: 7.5px 7.5px rgba(69, 66, 66, 0.35);
 }
 .heroContainer {
-  background-color: #0000ff;
+  background-color: #ea3f3f;
   height: 100%;
   width: 100%;
   float: left;
