--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
   float: left;
 }
 .heroContainer h1 {
-  font-size: 100px;
+  font-size: 6rem;
   font-weight: 700;
   font-family: 'Montserrat', sans-serif;
   color: #fafafa;
-  position: absolute;
+  position: relative;
   text-shadow: 7.5px 7.5px rgba(69, 66, 66, 0.35);
 }
 .heroText {
@@ -21,7 +21,7 @@
   position: relative;
   top: 20%;
   margin: auto;
-  line-height: 7.5em;
+  line-height: 7.5rem;
   z-index: 5;
 }
 .aboutContainer {
