--- a/css/style.less
+++ b/css/style.less
@@ -4,6 +4,8 @@
 @heroShadow: rgba(69,66,66,0.35);
 @mainFont: 'Montserrat', sans-serif;
 
+
+
 .shadow{
 	text-shadow:7.5px 7.5px @heroShadow;
 }
@@ -16,14 +18,13 @@
 }
 
 .heroContainer h1{
-	font-size:100px;
+	font-size:6rem;
 	font-weight:700;
 	font-family:@mainFont;
 	color:@mainWhite;
-	position:absolute;
+	position:relative;
+
 	.shadow
-
-
 }
 
 .heroText{
@@ -32,7 +33,7 @@
 	position:relative;
 	top:20%;
 	margin:auto;
-	line-height:7.5em;
+	line-height:7.5rem;
 	z-index:5;
 }
 
