--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,11 @@ a:hover {
 }
 /*Typography*/
 .heroContainer h1 {
-<<<<<<< HEAD
   font-size: 6rem;
-=======
-  font-size: 6em;
->>>>>>> Changed BG back
   font-weight: 700;
   font-family: 'Montserrat', sans-serif;
   color: #fafafa;
-  position: relative;
+  position: absolute;
   text-shadow: 7.5px 7.5px rgba(69, 66, 66, 0.35);
 }
 .aboutModule h1 {
