--- a/css/style.less
+++ b/css/style.less
@@ -101,6 +101,7 @@ a:hover{
 
 .aboutModule {
 	.moduleDimensions;
+	float:left;
 
 }
 
@@ -108,7 +109,9 @@ a:hover{
 	height:500px;
 	width:400px;
 	background-color:@greyShadow;
+	float:right;
 	position:relative;
+	margin-right:5%;
 
 }
 
