Back to position absolute

--- a/css/style.less
+++ b/css/style.less
@@ -45,8 +45,7 @@ a:hover{
 	font-weight:700;
 	font-family:@Montserrat;
 	color:@mainWhite;
-
-	position:relative;
+	position:absolute;
 	.shadow
 }
 
