--- a/css/style.less
+++ b/css/style.less
@@ -7,6 +7,19 @@
 @Montserrat: 'Montserrat', sans-serif;
 @ContainerShadows: 7.5px solid;
 
+
+body {
+	font-size: 100%;
+}
+
+h1{
+	font-size: 5em;
+	font-weight:700;
+	font-family:@Montserrat;
+	line-height:1.2em;
+}
+
+
 .shadow{
 	text-shadow:7.5px 7.5px @greyShadow;
 }
@@ -31,6 +44,7 @@ body{
 .heroContainer h1{
 	font-size:6rem;
 	font-weight:700;
+	color:@mainWhite;
 	position:absolute;
 	.shadow;
 }
@@ -79,7 +93,7 @@ body{
 	height:500px;
 	width:80%;
 	position:relative;
-	top:20%;
+	top:10%;
 	margin:auto;
 	line-height:7.5rem;
 	z-index:5;
