--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 /*LESS variables*/
+body {
+  font-size: 100%;
+}
+h1 {
+  font-size: 5em;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.2em;
+}
 .shadow {
   text-shadow: 7.5px 7.5px rgba(40, 40, 40, 0.2);
 }
@@ -17,6 +26,7 @@ body {
 .heroContainer h1 {
   font-size: 6rem;
   font-weight: 700;
+  color: #fafafa;
   position: absolute;
   text-shadow: 7.5px 7.5px rgba(40, 40, 40, 0.2);
 }
@@ -56,7 +66,7 @@ body {
   height: 500px;
   width: 80%;
   position: relative;
-  top: 20%;
+  top: 10%;
   margin: auto;
   line-height: 7.5rem;
   z-index: 5;
