--- a/css/queries.less
+++ b/css/queries.less
@@ -28,7 +28,7 @@
 	}
 
 	@media only screen and (max-device-width: 480px) {
-			/*body { font-size:115%;} */
+		body { font-size:115%;} 
 		.heroText{ top:2.5%; }
 	}  
 
