--- a/css/queries.css
+++ b/css/queries.css
@@ -47,7 +47,9 @@
   }
 }
 @media only screen and (max-device-width: 480px) {
-  /*body { font-size:115%;} */
+  body {
+    font-size: 115%;
+  }
   .heroText {
     top: 2.5%;
   }
