--- a/css/queries.less
+++ b/css/queries.less
@@ -1,35 +1,56 @@
-@media only screen and (max-width: 1440px) {
-		body { font-size:110%;}
+@media only screen and (min-width: 1440px) {
+		body { font-size:100%;}
 		.heroText{ top:10%; }
+		.moduleWrapper{width: 60%;}
+	} 
+
+@media only screen and (max-width: 1440px) {
+		body { font-size:80%;}
+		.heroText{ top:10%; }
+		.moduleWrapper{width: 80%;}
 	} 
 
 @media only screen and (max-width: 1280px) {
-		body { font-size:100%;}
+		body { font-size:70%;}
 		.heroText{ top:8%; }
+		.moduleWrapper{width: 80%;}
 	} 
 @media only screen and (max-width: 1100px) {
-		body { font-size:90%;}
+		body { font-size:70%;}
 		.heroText{ top:7%; }
+		.moduleWrapper{width: 90%;}
 	}  
 	       
 	@media only screen and (max-width: 960px) {
-		body { font-size:80%;}
+		body { font-size:60%;}
 		.heroText{ top:6.5%; }
+		.aboutModule { width: 50%;}
+		.aboutText{ width: 100%; }
+		.moduleWrapper{width: 80%;}
 	}   
 	
 	@media only screen and (max-width: 640px) {
-		body { font-size:60%;}
+		body { font-size:50%;}
 		.heroText{ top:6%; }
+		.aboutModule { width: 100%;}
+		.aboutText{ width: 100%; }
+		.moduleWrapper{width: 80%;}
 	}
 
 	@media only screen and (max-width: 480px) {
-		body { font-size:50%;}
+		body { font-size:30%;}
 		.heroText{ top:6%; }
+		.aboutModule { width: 100%;}
+		.aboutText{ width: 100%; }
+		.moduleWrapper{width: 80%;}
 	}
 
 	@media only screen and (max-device-width: 480px) {
 		body { font-size:115%;} 
 		.heroText{ top:2.5%; }
+		.aboutModule { width: 100%;}
+		.aboutText{ width: 100%; }
+		.moduleWrapper{width: 80%;}
 	}  
 
 	@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
