--- a/css/style.less
+++ b/css/style.less
@@ -7,16 +7,9 @@
 @Montserrat: 'Montserrat', sans-serif;
 @ContainerShadows: 7.5px solid;
 
-
-body {
-	font-size: 100%;
-}
-
-h1{
-	font-size: 5em;
-	font-weight:700;
-	font-family:@Montserrat;
-	line-height:1.2em;
+.box-sizing{ -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 
@@ -26,6 +19,20 @@ h1{
 
 /*Global rules*/
 
+body{
+	font-size: 100%;
+	color:@mainWhite;
+	font-family:@Montserrat;
+
+}
+
+h1{
+	font-size: 7em;
+	font-weight:700;
+	font-family:@Montserrat;
+	line-height:1.2em;
+}
+
 a{
 	color:@mainRed;
 }
@@ -34,16 +41,8 @@ a:hover{
 	color:rgb(178,61,61);
 }
 
-body{
-	color:@mainWhite;
-	font-family:@Montserrat;
-
-}
-
 /*Typography*/
 .heroContainer h1{
-	font-size:6rem;
-	font-weight:700;
 	color:@mainWhite;
 	position:absolute;
 	.shadow;
@@ -100,44 +99,45 @@ body{
 }
 
 .aboutContainer{
-	height:100%;
+	margin: 0px auto 0;
+	z-index: 200;
+	padding-top: 40px;
 	width:100%;
+	height: 100%;
 	background-color: @mainGrey;
 	float:left;
 	border-top:@ContainerShadows @greyShadow;
 
 }
 
-
 .moduleWrapper{
-	margin-left:10%;
+	margin-left:auto;
+	margin-right:auto;
+	width: 80%;
 }
 
 .aboutModule {
+	margin-bottom: 50px;
 	height:200px;
-	width:250px;
-	margin-top:5%;
+	width: 30%;
 	float:left;
+	border: 10px;
+	padding: 20px;
+	.box-sizing;
 }
 
-#hours{
-	margin-right:5%;
-}
 
 .aboutText{
-	min-height:400px;
-	width:550px;
-	padding:50px;
+	width: 40%;
+	height: 400px;
+	overflow: hidden;
 	background-color:@greyShadow;
 	float:left;
 	position:relative;
-	margin-top:5%;
-	margin-left:5%;
 	border-radius:3%;
-
-
+	border: 30px;
+	.box-sizing;
 }
-
 
 
 
